--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "puppeteer-app:build"
+            "browserTarget": "puppeteer-app:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -123,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "puppeteer-app"
+    }
+  },
+  "defaultProject": "puppeteer-app",
+  "cli": {
+    "analytics": "b2d2eaa0-2065-4259-b80f-ced3a24c7ed9"
+  }
 }
